--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "dotenv": "^16.5.0",
     "embla-carousel-react": "^8.6.0",
     "firebase": "^10.12.4",
+    "firebase-admin": "^12.3.0",
     "genkit": "^1.14.1",
     "jsqr": "^1.4.0",
     "lucide-react": "^0.475.0",
