--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "firebase-admin": "^12.3.0",
     "genkit": "^1.14.1",
     "jsqr": "^1.4.0",
+    "jspdf": "^2.5.1",
     "lucide-react": "^0.475.0",
     "next": "15.3.3",
     "patch-package": "^8.0.0",
