--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "genkit": "^1.14.1",
     "jsqr": "^1.4.0",
     "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.8.2",
     "lucide-react": "^0.475.0",
     "next": "15.3.3",
     "patch-package": "^8.0.0",
